--- a/.github/workflows/testaction.yml
+++ b/.github/workflows/testaction.yml
@@ -31,7 +31,12 @@ jobs:
       - name: Validate version increment
         if: steps.check_version.conclusion != 'failure'
         run: |
-          version_incremented=$(grep -E "define\('VERSION', '.*'\);" version.php | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+' | tail -n 1)
+           # Extract version strings from version.php file
+          version_strings=$(grep -E "\['(admin|teacher|user)\.version'\] = '[0-9]+\.[0-9]+\.[0-9]+'" version.php)
+
+          # Extract the last version string
+          version_incremented=$(echo "$version_strings" | awk '{print $NF}')
+
           if [ -z "$version_incremented" ]; then
             echo "Error: version.php does not contain a valid version increment."
             exit 1
