--- a/.github/workflows/testaction.yml
+++ b/.github/workflows/testaction.yml
@@ -19,17 +19,17 @@ jobs:
           js_changes=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep '\.js$' | wc -l)
           echo "::set-output name=js_changes::$js_changes"
 
-      - name: Check version increment
-        id: check_version
+      - name: Check for version.php changes
+        id: check_version_php
         if: steps.check_js.outputs.js_changes != '0'
         run: |
           if ! git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep -q 'version.php'; then
-            echo "Error: JS changes detected but version.php is not modified."
+            echo "Error: JavaScript changes detected but version.php is not modified."
             exit 1
           fi
 
       - name: Validate version increment
-        if: steps.check_version.conclusion != 'failure'
+        if: steps.check_version_php.conclusion != 'failure'
         run: |
           version_strings=$(grep -E "\['(admin|teacher|user)\.version'\] = '[0-9]+\.[0-9]+\.[0-9]+'" version.php)
           version_incremented=$(echo "$version_strings" | awk '{print $NF}')
