--- a/.github/workflows/testaction.yml
+++ b/.github/workflows/testaction.yml
@@ -4,14 +4,14 @@ on:
   pull_request:
     paths:
       - '**.js'
-      - 'version.php'
+     - 'version.php'
 
 jobs:
   check-js-version:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Check if JS files were modified
         id: check_js
@@ -23,7 +23,7 @@ jobs:
         id: check_version_php
         if: steps.check_js.outputs.js_changes != '0'
         run: |
-          if ! (git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep -q '\.js$' && git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep -q 'version.php'); then
+          if ! (git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep -q 'version.php'); then
               echo "Error: JavaScript changes detected but version.php is not modified."
               exit 1
           fi
@@ -37,4 +37,6 @@ jobs:
           if [ -z "$version_incremented" ]; then
             echo "Error: version.php does not contain a valid version increment."
             exit 1
-          fi
+
+      - name: Print GitHub event context
+        run: echo "${{ toJson(github.event) }}"
