--- a/.github/workflows/testaction.yml
+++ b/.github/workflows/testaction.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+        with:
+          fetch-depth: 0
+          
       - name: Check if JS files were modified
         id: check_js
         run: |
