--- a/.github/workflows/testaction.yml
+++ b/.github/workflows/testaction.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - '**.js'
+      - '**.css'
       - 'version.php'
 
 jobs:
@@ -25,6 +26,7 @@ jobs:
         id: check_js
         run: |
           js_changes=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep '\.js$' | wc -l)
+          echo "js_changes=$js_changes" >> $GITHUB_STATE
           echo "js_changes=$js_changes" >> $GITHUB_OUTPUT
 
       - name: Check for version.php changes
