--- a/.github/workflows/testaction.yml
+++ b/.github/workflows/testaction.yml
@@ -27,14 +27,19 @@ jobs:
         run: |
           js_changes=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep '\.js$' | wc -l)
           echo "js_changes=$js_changes" >> $GITHUB_STATE
-          echo "js_changes=$js_changes" >> $GITHUB_OUTPUT
+
+      - name: Check if JS files were modified
+        id: check_css
+        run: |
+          css_changes=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep '\.css$' | wc -l)
+          echo "css_changes=$css_changes" >> $GITHUB_STATE
 
       - name: Check for version.php changes
         id: check_version_php
-        if: steps.check_js.outputs.js_changes != '0'
+        if: steps.check_js.outputs.js_changes != '0' || steps.check_css.outputs.css_changes != '0'
         run: |
           if ! (git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep -q 'version.php'); then
-              echo "Error: JavaScript changes detected but version.php is not modified."
+              echo "Error: JavaScript / CSS changes detected but version.php is not modified."
               exit 1
           fi
 
