--- a/.github/workflows/testaction.yml
+++ b/.github/workflows/testaction.yml
@@ -47,28 +47,24 @@ jobs:
           echo "teacher_changes=$teacher_changes" >> $GITHUB_ENV
           echo "Teacher changes: $teacher_changes"
 
-      - name: Check for version.php changes
-        id: check_version_php
-        if: env.admin_changes != '0' || env.user_changes != '0' || env.teacher_changes != '0'
+      - name: Get previous version.php
+        id: get_previous_version
         run: |
-          if ! (echo "$files_changed" | grep -q 'version.php'); then
-              echo "Error: JavaScript / CSS changes detected but version.php is not modified."
-              exit 1
-          fi
+          git show origin/${{ github.base_ref }}:version.php > previous_version.php
 
       - name: Validate version increment
-        if: steps.check_version_php.conclusion != 'failure'
+        if: steps.check_admin.outputs.admin_changes != '0' || steps.check_user.outputs.user_changes != '0' || steps.check_teacher.outputs.teacher_changes != '0'
         run: |
           check_version_increment() {
             local version_key=$1
             local changes=$2
             if [ "$changes" -ne "0" ]; then
-              local version_file="version.php"
-              local version_incremented=$(git diff origin/${{ github.base_ref }} ${{ github.sha }} -- "$version_file" | grep -E "\['$version_key'\] = '[0-9]+\.[0-9]+\.[0-9]+'")
+              local previous_version=$(grep -E "\['$version_key'\] = '[0-9]+\.[0-9]+\.[0-9]+'" previous_version.php)
+              local current_version=$(grep -E "\['$version_key'\] = '[0-9]+\.[0-9]+\.[0-9]+'" version.php)
 
-              echo "Checking $version_key: $version_incremented"
+              echo "Checking $version_key: Previous version: $previous_version, Current version: $current_version"
 
-              if [ -z "$version_incremented" ]; then
+              if [ "$previous_version" == "$current_version" ]; then
                 echo "Error: $version_key in version.php is not incremented."
                 exit 1
               fi
